# Ralphthon-ICML-2026-Track2

./: .gitignore  AGENTS.md  EXPERIMENTS.jsonl  LICENSE  MANIFEST.json  PROGRESS.md  RALPH_GOAL.md  README.md  START_CODEX.md  pyproject.toml
.agent/: PLANS.md  RALPHTHON_EXECPLAN.md
docs/: CODEX_PREFLIGHT.md  EVALUATION_SPEC.md  EVENT_CONTEXT.md  REPORT_SPEC.md  REVIEW_SPEC.md  SECURITY_THREAT_MODEL.md
evals/results/: quality.json  runtime.json  security.json
prompts/: adjudicator.md  claim_extractor.md  common_security.md  evidence_reviewer.md  impact_reviewer.md  method_reviewer.md  score_calibrator.md  score_comment_calibrator.md  tri_lens_reviewer.md
report/: __init__.py  build_report.py  content.md
rubrics/: icml_review.yaml
schemas/: finding.schema.json  review_submission.schema.json
src/reviewharness/: __init__.py  __main__.py  api_adapter.py  artifacts.py  claims.py  cli.py  codex_provider.py  config.py  deadline.py  eval_quality.py  eval_runtime.py  eval_security.py  evidence.py  formatter.py  injection.py  kernel.py  kernel_support.py  live.py  live_cli.py  live_support.py  local_provider.py  parser.py  provider_contracts.py  providers.py  quality_cases.py  reviewers.py  runbook_adapter.py  runner.py  schemas.py  scoring.py  secure_ingest.py  security_cases.py  validation.py
submission/: FINAL_SUBMISSION_CHECKLIST.md  abstract.txt  openreview_fields.txt  repository.txt  run_instructions.txt  title.txt
tests/e2e/: test_cli.py  test_cli_help.py
tests/fixtures/: __init__.py  generate_pdfs.py
tests/integration/: test_eval_runtime.py  (+3 more)
(+214 files in other folders)
